# MSBrossAI

./: .env.example  .gitignore  INICIAR_NIKOLINA_MAC.sh  MASTER_MANUAL.md  PLAN_FUSION.md  README.md  START_SYSTEM.sh  backup_ecosystem.sh  check_envs.py  check_hash.py  color_check.py  docker-compose.yml  ecosystem.config.js  finish_setup.sh  fix_logos.js  fix_pages.py  fix_portal.js  fix_proxy.js  implementation_plan.md  linkedin_posts.md  merged_reqs.txt  nikolina-ecosystem.config.js  package-lock.json  package.json  proxy.js  proxy_server.js  rebuild_all_frontends.sh  rebuild_logs.txt  test-logisearch.js  test_api.php  visits.json  walkthrough.md
apps/jartosdto/server/: Dockerfile  pyproject.toml
apps/jartosdto/server/app/: __init__.py  config.py  dependencies.py  main.py
apps/jartosdto/server/app/api/: router.py
apps/jartosdto/server/app/api/v1/: admin.py  agents.py  auth.py  chat.py  documents.py  sandbox.py  search.py
apps/jartosdto/server/app/core/: __init__.py
apps/jartosdto/server/app/core/llm/: gateway.py  streaming.py
apps/jartosdto/server/app/core/multimodal/: __init__.py  documents.py
apps/jartosdto/server/app/core/rag/: __init__.py  embeddings.py  pipeline.py
apps/jartosdto/server/app/core/sandbox/: executor.py
apps/jartosdto/server/app/core/search/: tavily.py
apps/jartosdto/server/app/db/: base.py  session.py  vector.py
apps/jartosdto/server/app/models/: __init__.py
apps/jartosdto/server/app/schemas/: __init__.py
apps/jartosdto/server/faiss_index/index/: index.faiss  index.pkl
apps/mapfre-infocol/frontend/: .gitignore  LICENSE  README.md  biome.json  next.config.mjs  package-lock.json  package.json  pyproject.toml
apps/mapfre-infocol/frontend/PLAN/: EXPERIENCE.md  architecture.md  prd.md
apps/mapfre-infocol/frontend/PRESENTATION/design/: presentacion-mapfre.md
apps/mapfre-infocol/frontend/config/: settings.yaml
apps/mapfre-infocol/frontend/docs/: ARQUITECTURA.md  GUIA_COMPLETA.md  INTEGRACION_DATOS_REALES.md
apps/mapfre-infocol/frontend/frontend/: README.md  debug-fork.js  next.config.mjs  package-lock.json  package.json
apps/mapfre-infocol/frontend/frontend/src/app/: globals.css  layout.tsx
apps/mapfre-infocol/frontend/src/app/: globals.css
apps/mapfre-infocol/frontend/src/infocol/: __init__.py  __main__.py  analyzer.py  browser.py  config.py  displacement.py  form_filler.py  main.py  models.py  security.py  tariff.py
apps/mapfre-infocol/frontend/tests/: test_displacement.py  test_models.py  test_sanitizer.py  test_tariff.py
deploy/: deploy.sh  (+22 more)
(+1150 files in other folders)
